--- a/central/templates/cadastro.html
+++ b/central/templates/cadastro.html
@@ -3,7 +3,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title> Central | Login </title>
+  <title> Central | Cadastro </title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
@@ -16,16 +16,25 @@
 
   <main class="login">
     <div class="login_container">
-      <h1 class="login_title">  Central    </h1>
+      <h1 class="login_title">  Cadastro  </h1>
       <form action="" class="login_form">
         <input type="email" class="login_input" placeholder="Email" name="email">
         <span class="login_input-border"></span>
+
+        <input type="text" class="login_input" placeholder="Username" name="username">
+        <span class="login_input-border"></span>
+
+        <input type="number" class="login_input" placeholder="Telefone" name="telefone">
+        <span class="login_input-border"></span>
+        
         <input type="password" class="login_input" placeholder="Senha" name="senha">
         <span class="login_input-border"></span>
 
-        <button class="login_submit"> Login </button>
-        <a href="#" class="login_reset"> Esqueceu a senha ?!? </a> 
-        <a href="{% url 'cadastro' %}" class="login_reset criar"> Criar Conta </a>
+        <input type="password" class="login_input" placeholder="Confirmar senha" name="confirmar_senha">
+        <span class="login_input-border"></span>
+
+        <button class="login_submit"> Cadastrar </button>
+        <a href="{% url 'home' %}" class="login_reset"> Tens a conta ? Login ! </a>
       </form>
     </div>
   </main>
