--- a/central/templates/main.html
+++ b/central/templates/main.html
@@ -15,25 +15,15 @@
 </head>
 <body>
 
-
-  {% for message in messages %}
-  <div class="alert alert alert-{{message.tags}} alert-dismissible fade show" role="alert">
-    <strong>Mensagem: </strong> {{ message }}
-    <button type="button" class="close" data-dismissible="alert" aria-label="Close">
-      <span aria-hidden="true">&times;</span>
-    </button>
-  </div>
-  {% endfor %}
-
   <main class="login">
     <div class="login_container">
       <h1 class="login_title">  HOME    </h1>
       
       
       {% if user.is_authenticated %}
-      <h3 class="login_title">  Email   {{ email }}  </h3>
-      <h3 class="login_title">  User  {{ name }}   </h3>
-      <h4 class="login_title">  Logado com sucesso !!!  </h4>
+      <h3 class="login_title">  Email:   {{ email }}  </h3>
+      <h3 class="login_title">  User:  {{ name }}   </h3>
+      <h4 class="login_title">  Logado com sucesso !.!  </h4>
         
       {% endif %}
         
